--- a/maven-jsduck/src/main/resources/template/resources/sass/_categories.scss
+++ b/maven-jsduck/src/main/resources/template/resources/sass/_categories.scss
@@ -24,11 +24,11 @@
     // sections are divided into three columns
     .left-column {
       float: left;
-      width: 250px;
-      margin-left: 20px; }
+      margin-left: 20px; 
+      margin-right: 20px;}
     .middle-column {
       float: left;
-      width: 280px; }
+      margin-right: 20px; }
     .right-column {
       float: left; }
     // A list of links
